Fix z-index so that container z-index trumps navbar z-index when tooltip is shown (and side panel shown).  This was necessary so that gene search dropdown overlays container by default.

--- a/assets/css/sass/_slideout.sass
+++ b/assets/css/sass/_slideout.sass
@@ -222,7 +222,7 @@
   -moz-transform: translate(356px, 0)
   -ms-transform: translate(356px, 0)
   -o-transform: translate(356px, 0)
-  z-index: 1030
+  //z-index: 1030
 
 
 /* make keyframes that tell the start state and the end state of our object
