--- a/assets/css/sass/site.sass
+++ b/assets/css/sass/site.sass
@@ -1834,6 +1834,14 @@ header
   text-align: left
   color: $text-color
 
+.tt-dropdown-menu
+  z-index: 1033 !important
+  .tt-dataset-name
+    z-index: 1033 !important
+    .tt-suggestions
+      z-index: 1033  !important
+
+
 .tt-input, .tt-hint
   padding: 5px 8px !important
   font-size: 16px !important
